[package]
name = "tf_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "0.13.0"
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5"
dotenv = "0.15"
log = "0.4"  
rusqlite = { version = "0.32.1", features = ["bundled"] }
teloxide-macros = "0.8"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = "0.11"
thirtyfour = "0.34.0"
regex = "1"
lazy_static = "1.4"